src/tests/e2e/snapshots/vc_frame__tests__e2e__cases__multiple_users_in_different_panes_and_same_tab-2.snap
---
source: src/tests/e2e/cases.rs
expression: second_runner_snapshot
---
        𝚅𝚒𝚋𝚎𝚌𝚛𝚊𝚏𝚝𝚎𝚍.    ⎮  ▷ N   ◉ Start here [ ]   ○ Shell                         ✍ Composer     · ❯_ Quick cmd       
SESSIONS 1 · multiple_us┌ Start here — map of this workspace ──┤ MY FOCUS AND:   ├─────────────────────────────────────┐
 ● Live …               │          Start here — map of this workspace                                                  │
01 ◉ multiple_users_in_s│                                                                                              │
                        │          vc-frame 0.47.3 · Vibecrafted operator layout                                       │
                        │          You are looking at ONE session (this window). It has a fixed chrome:                │
                        │            TOP    = this session: (name) · mode chip · tabs — ◉ marks where you are          │
                        │            LEFT   = SESSIONS rail — other sessions / agent rooms (click to jump)             │
                        │            CENTER = this Guide (help). Work happens on the Shell tab.                        │
                        │            BOTTOM = status bar (modes: Ctrl+t TAB, Ctrl+p PANE, Ctrl+o SESSION)              │
                        │                                                                                              │
                        │          Do this first (60 seconds):                                                         │
                        │            1. Open the Shell tab — click "Shell" on the top bar, or: Ctrl+t then 2           │
                        │            2. Read the banner in the shell, then run:  vibecrafted start                     │
                        │            3. Come back here anytime (Ctrl+t then 1) if you get lost.                        │
                        │                                                                                              │
                        │          Learn the chrome (click a topic):                                                   │
                        │          1. Left rail = sessions (not tabs)                                                  │
                        │          2. Top bar = tabs of this session                                                   │
                        │          3. Keyboard + mouse cheat sheet                                                     │
                        │          4. What to type on the Shell tab                                                    │
                        │Help: <↓↑> - Navigate, <ESC> - Dismiss, <?> - Usage Tips                                      │
 🅵… · 🆇… · 🅽…           └──────────────────────────────────────────────────────────────────────────────────────────────┘
 ⌃g  LOCK  ⌃p  PANE  ⌃t  TAB  ⌃n  RESIZE  ⌃h  MOVE  ⌃s  SEARCH  ⌃o  SESSION                    ...  BASE
