src/tests/e2e/snapshots/vc_frame__tests__e2e__cases__multiple_users_in_same_pane_and_tab.snap
---
source: src/tests/e2e/cases.rs
expression: first_runner_snapshot
---
        𝚅𝚒𝚋𝚎𝚌𝚛𝚊𝚏𝚝𝚎𝚍.    ⎮  ▷ N   ◉ Start here [ ]   ○ Shell                         ✍ Composer     · ❯_ Quick cmd       
SESSIONS 1 · multiple_us┌ Start here — map of this workspace ──┤ MY FOCUS AND:   ├─────────────────────────────────────┐
 ● Live …               │                                                                                              │
01 ◉ multiple_users_in_s│                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
                        │                                                                                              │
 🅵… · 🆇… · 🅽…           └──────────────────────────────────────────────────────────────────────────────────────────────┘
 ⌃g  LOCK  ⌃p  PANE  ⌃t  TAB  ⌃n  RESIZE  ⌃h  MOVE  ⌃s  SEARCH  ⌃o  SESSION                    ...  BASE
